alot, very cool still ofc

--- a/qutebrowser/solarized-all-sites-dark.css
+++ b/qutebrowser/solarized-all-sites-dark.css
@@ -1748,3 +1748,57 @@ body #conversation-list-rows .conversation{
 .headerSecuredDesktop-logo{
   background-color: #2f343f !important;
 }
+#channel-header.ytd-c4-tabbed-header-renderer{
+  background-color: #272b33 !important;
+}
+ytd-page-manager > .ytd-page-manager{
+  background-color: #272b33 !important;
+}
+#tabs-inner-container.ytd-c4-tabbed-header-renderer{
+  background-color: #272b33 !important;
+}
+.quote{
+  color: #839496 !important;
+}
+.text{
+  color: #839496 !important;
+}
+b{
+  color: #839496 !important;
+}
+.article {
+  background-color: #272b33 !important;
+}
+.ab_widget{
+  background-color: #272b33 !important;
+}
+.plot_summary{
+  background-color: #272b33 !important;
+}
+.wrapper{
+  background-color: #272b33 !important;
+}
+.fixed{
+  background-color: #272b33 !important;
+}
+.mini-article{
+  background-color: #272b33 !important;
+}
+.aux-content-widget-2{
+  background-color: #272b33 !important;
+}
+.mini-article poll-widget-rhs{
+  background-color: #272b33 !important;
+}
+.flatland{
+  background-color: #272b33 !important;
+}
+.ab_ninja{
+  background-color: #272b33 !important;
+}
+#styleguide-v2{
+  background-color: #272b33 !important;
+}
+div #sidebar{
+  background-color: #272b33 !important;
+}
