tikz snippets and some sexy

--- a/qutebrowser/onedark-all-sites.css
+++ b/qutebrowser/onedark-all-sites.css
@@ -2069,3 +2069,199 @@ input{
   border-color: #272b33 !important;
   color: #f3f4f5 !important;
 }
+.default_olfzxm-o_O-container_1r044d9{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #f3f4f5 !important;
+}
+.text_12zg6rl-o_O-LabelSmall_t10oqw-o_O-possibleMasteryPoints_1idtw05{
+  color: #878E7D !important;
+}
+.text_12zg6rl-o_O-LabelSmall_t10oqw-o_O-label_1ntyrs8-o_O-labelNoPoints_16kvz0d{
+  color: #878E7D !important;
+}
+.modal_1r4hg1q-o_O-animateOutModal_8lk218-o_O-modalUp_y1os62-o_O-modal_prm8y6{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #f3f4f5 !important;
+}
+.card_19ssc54{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #f3f4f5 !important;
+}
+.default_olfzxm-o_O-container_1q7y3dr{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #f3f4f5 !important;
+}
+.default_olfzxm-o_O-container_3y49j1-o_O-practiceItemMarginTop_1f1vtcy-o_O-practiceItemMarginBottom_15pzwsn{
+  background: #2f343f !important;
+  background-color: #2f343f !important;
+  border-color: #272b33 !important;
+  color: #f3f4f5 !important;
+}
+.default_olfzxm-o_O-container_3y49j1-o_O-practiceItemMarginTop_1f1vtcy-o_O-practiceItemMarginBottom_15pzwsn-o_O-upNextContainer_10w18zd{
+  background: #2f343f !important;
+  background-color: #2f343f !important;
+  border-color: #272b33 !important;
+  color: #f3f4f5 !important;
+}
+.text_12zg6rl-o_O-Body_1rk1c4b{
+  color: #878E7D !important;
+}
+.text_12zg6rl-o_O-header_1ynhzov-o_O-LabelMedium_wagzcm-o_O-contentColumnTitle_1idtw05{
+  color: #878E7D !important;
+}
+.text_12zg6rl-o_O-LabelLarge_np83x5-o_O-title_pybusk{
+  color: #878E7D !important;
+}
+.default_olfzxm-o_O-mastery_1b2gvf6{
+    border-left: none !important;
+}
+.default_olfzxm-o_O-rightColumn_yvdiah{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #f3f4f5 !important;
+}
+.progressBar_9afuv5{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #f3f4f5 !important;
+}
+extraModulePadding_wbg08x-o_O-noExtraModulePaddingOnMobile_1u40xvj {
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #f3f4f5 !important;
+}
+.modal_1r4hg1q-o_O-modal_19vzjpy{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+.modalContents_1041v41 {
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+.default_olfzxm-o_O-footer_13lawq7-o_O-footerInModal_15kzu1c {
+  background: #2f343f !important;
+  background-color: #2f343f !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+.mq-editable-field{
+  background: #2f343f !important;
+  background-color: #2f343f !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+.text_12zg6rl-o_O-LabelLarge_np83x5{
+  color: #878E7D !important;
+}
+.wonderBlocksHeader_hft5d8 {
+  background: #2f343f !important;
+  background-color: #2f343f !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+.wrapper_1nzxe8 {
+  background: #2f343f !important;
+  background-color: #2f343f !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+.wrapper_1ehwwvo {
+  background: #2f343f !important;
+  background-color: #2f343f !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+.default_olfzxm-o_O-toolbar_2z9d9g{
+    border-top: none !important;
+}
+.shared_ko2ejt-o_O-default_1bzye1z-o_O-breadcrumb_1t18jud-o_O-mobileChevron_1aveoo3 {
+  background: #2f343f !important;
+  background-color: #2f343f !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+.button_1eqj1ga-o_O-shared_1t8r4tr-o_O-default_9fm203-o_O-btn_1t9rod3 {
+  background: #2f343f !important;
+  background-color: #2f343f !important;
+  border-color: #272b33 !important;
+  color: #f3f4f5 !important;
+}
+.modal_1r4hg1q-o_O-modal_prm8y6 {
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+.title_16ph6tz-o_O-titleLong_1luqhtb{
+  color: #878E7D !important;
+}
+.default_olfzxm-o_O-moduleDefault_15l2unh-o_O-moduleFirst_4jtv49 {
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+.moduleList_13hv8io{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+.default_olfzxm {
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+.default_olfzxm-o_O-container_1i7iq2x {
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+.default_olfzxm-o_O-content_1rcvtsm {
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+.default_olfzxm-o_O-wrapper_n6l4ws{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+  margin: 0 !important;
+}
+.modal_1r4hg1q-o_O-animateOutModal_8lk218-o_O-modalUp_y1os62-o_O-modal_195d8md {
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+.paragraph{
+  color: #878E7D !important;
+}
+.container_c3e8pu{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+.aboveScratchpad_1mom3e1-o_O-item_1lrrya9-o_O-responsiveItem_l6nirq-o_O-selectedItem_rc29gx{
+  background-color: #2f343f !important;
+}
