added rounded corners to i3

--- a/qutebrowser/onedark-all-sites.css
+++ b/qutebrowser/onedark-all-sites.css
@@ -1705,7 +1705,7 @@ body #conversation-list-rows .conversation{
   background-color: #272b33 !important;
 }
 .playControls__inner, .playControls__bg{
-  background-color: #2f343f !important;
+  background-color: #272b33 !important;
 }
 .trackItemWithEdit.active, .trackItemWithEdit.active .trackItemWithEdit__additional, .tabs__tabs, .g-modal-section, .addToPlaylistItem__actions, .g-dark, .sc-background-light, .readMoreBadge__countWrapper{
   background-color: #272b33 !important;
@@ -2264,4 +2264,129 @@ extraModulePadding_wbg08x-o_O-noExtraModulePaddingOnMobile_1u40xvj {
 }
 .aboveScratchpad_1mom3e1-o_O-item_1lrrya9-o_O-responsiveItem_l6nirq-o_O-selectedItem_rc29gx{
   background-color: #2f343f !important;
+}
+._caawxu3{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+._14yiarbt{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+._vw1nmh{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+.nav-bar{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+._1fml0e3{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+._1e8pns9{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+._1xz0fezn{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+._1lrse4nj{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+._16zb21k{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+
+.breadcrumbs_nav{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+._5p7lt5{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+._e296pg{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+._1hnhjoh{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+._fss88w4{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+._1o51yl6{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+._hwx354t{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+._ragi3x5{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+._u4h5gfk{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+tr td{
+  background-color: #272b33 !important;
+  color: #878E7D !important;
+}
+._1xqf65h8{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
+}
+._1w13gevt{
+  background: #272b33 !important;
+  background-color: #272b33 !important;
+  border-color: #272b33 !important;
+  color: #878E7D !important;
 }
